--- a/packages/star-citizen/package.json
+++ b/packages/star-citizen/package.json
@@ -26,7 +26,7 @@
     "build": "tsc",
     "lint": "prettier --check ./src",
     "lint:fix": "prettier --write ./src",
-    "apify:push": "apify push",
+    "apify:push": "../../apify-push.sh star-citizen",
     "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
   },
   "author": "Joël Charles",
