chore: also push slug in key value store

--- a/packages/star-citizen/package.json
+++ b/packages/star-citizen/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "node": ">=16.0.0"
   },
+  "config": {
+    "slug": "star-citizen"
+  },
   "dependencies": {
     "apify": "^3.0.2",
     "crawlee": "^3.0.4",
