--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "build:all": "pnpm -r --filter \"./packages/*\" --parallel build",
     "prepare": "husky install",
     "precommit": "lint-staged",
-    "test": "pnpm run build:all && pnpm run -r test"
+    "test": "pnpm run build:all && pnpm run -r test",
+    "create-actor": "esno ./scripts/create-actor.ts"
   },
   "devDependencies": {
     "@apify/tsconfig": "^0.1.0",
+    "@types/inquirer": "^9.0.1",
+    "@types/mustache": "^4.2.1",
     "@types/node": "^16.11.59",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
+    "esno": "^0.16.3",
     "husky": "^8.0.1",
+    "inquirer": "^9.1.2",
     "lint-staged": "^13.0.3",
+    "meow": "^10.1.3",
+    "mustache": "^4.2.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "undici": "^5.10.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
