--- a/packages/star-citizen/package.json
+++ b/packages/star-citizen/package.json
@@ -13,12 +13,10 @@
   "dependencies": {
     "apify": "^3.0.2",
     "crawlee": "^3.0.4",
-    "fecha": "^4.2.3",
-    "sanitize-html": "^2.7.2"
+    "@wng/common": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^16.11.59",
-    "@types/sanitize-html": "^2.6.2",
     "esno": "^0.16.3",
     "typescript": "^4.8.3"
   },
