--- a/packages/minecraft/package.json
+++ b/packages/minecraft/package.json
@@ -11,20 +11,21 @@
     "slug": "minecraft"
   },
   "dependencies": {
+    "@wng/common": "workspace:*",
     "apify": "^3.0.2",
-    "crawlee": "^3.0.4",
-    "@wng/common": "workspace:*"
+    "crawlee": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.59",
     "esno": "^0.16.3",
+    "tsup": "^6.2.3",
     "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "pnpm run start:dev",
     "start:prod": "node dist/src/main.js",
     "start:dev": "esno src/main.ts",
-    "build": "tsc",
+    "build": "tsup",
     "lint": "prettier --check ./src",
     "lint:fix": "prettier --write ./src",
     "apify:push": "../../apify-push.sh minecraft",
