--- a/packages/star-citizen/package.json
+++ b/packages/star-citizen/package.json
@@ -18,13 +18,14 @@
   "devDependencies": {
     "@types/node": "^16.11.59",
     "esno": "^0.16.3",
+    "tsup": "^6.2.3",
     "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "pnpm run start:dev",
     "start:prod": "node dist/src/main.js",
     "start:dev": "esno src/main.ts",
-    "build": "tsc",
+    "build": "tsup",
     "lint": "prettier --check ./src",
     "lint:fix": "prettier --write ./src",
     "apify:push": "../../apify-push.sh star-citizen",
