--- a/packages/minecraft/package.json
+++ b/packages/minecraft/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "pnpm run start:dev",
-    "start:prod": "node dist/src/main.js",
+    "start:prod": "node dist/main.js",
     "start:dev": "esno src/main.ts",
     "build": "tsup",
     "lint": "prettier --check ./src",
