--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -8,6 +8,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@crawlee/core": "^3.0.4",
     "apify": "^3.0.2",
     "crawlee": "^3.0.4",
     "fecha": "^4.2.3",
@@ -17,6 +18,14 @@
     "@types/node": "^16.11.59",
     "@types/sanitize-html": "^2.6.2",
     "typescript": "^4.8.3"
+  },
+  "exports": {
+    ".": {
+      "default": "./src/index.ts"
+    },
+    "./riot": {
+      "default": "./src/riot/index.ts"
+    }
   },
   "scripts": {
     "lint": "prettier --check ./src",
