--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "precommit": "lint-staged",
     "test": "pnpm run build:all && pnpm run -r test",
     "create-actor": "esno ./scripts/create-actor.ts",
-    "apify-check-health": "esno ./scripts/apify-check-health.ts"
+    "apify-check-health": "esno ./scripts/apify-check-health.ts",
+    "post-webhook": "esno ./scripts/post-webhook.ts"
   },
   "devDependencies": {
     "@apify/tsconfig": "^0.1.0",
