--- a/packages/genshin-impact/package.json
+++ b/packages/genshin-impact/package.json
@@ -11,15 +11,15 @@
     "slug": "genshin-impact"
   },
   "dependencies": {
+    "@wng/common": "workspace:*",
     "apify": "^3.0.2",
-    "crawlee": "^3.0.4",
-    "@wng/common": "workspace:*"
+    "crawlee": "^3.0.4"
   },
   "devDependencies": {
-    "@types/node": "^16.11.59",
+    "@types/node": "^16.11.64",
     "esno": "^0.16.3",
     "tsup": "^6.2.3",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "pnpm run start:dev",
