--- a/packages/overwatch-2/package.json
+++ b/packages/overwatch-2/package.json
@@ -11,12 +11,12 @@
     "slug": "overwatch-2"
   },
   "dependencies": {
+    "@wng/common": "workspace:*",
     "apify": "^3.0.2",
-    "crawlee": "^3.0.4",
-    "@wng/common": "workspace:*"
+    "crawlee": "^3.0.4"
   },
   "devDependencies": {
-    "@types/node": "^16.11.64",
+    "@types/node": "^16.11.65",
     "esno": "^0.16.3",
     "tsup": "^6.2.3",
     "typescript": "^4.8.4"
