feat: pokemon-violet and pokemon-scarlet

--- a/packages/pokemon-scarlet/package.json
+++ b/packages/pokemon-scarlet/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "@wng/common",
+  "name": "@wng/pokemon-scarlet",
   "version": "0.0.1",
+  "private": "true",
   "type": "module",
-  "description": "Common dependencies for @wng/ packages",
-  "main": "src/index.ts",
+  "description": "Pokémon Scarlet crawler for What's New Games",
   "engines": {
     "node": ">=16.0.0"
   },
+  "config": {
+    "slug": "pokemon-scarlet"
+  },
   "dependencies": {
     "apify": "^3.1.1",
-    "@apify/timeout": "^0.3.0",
-    "cheerio": "^1.0.0-rc.12",
     "crawlee": "^3.1.2",
-    "fecha": "^4.2.3",
-    "sanitize-html": "^2.7.3"
+    "@wng/common": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^16.11.65",
-    "@types/sanitize-html": "^2.6.2",
+    "esno": "^0.16.3",
+    "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   },
-  "exports": {
-    ".": {
-      "default": "./src/index.ts"
-    },
-    "./riot": {
-      "default": "./src/riot/index.ts"
-    }
-  },
   "scripts": {
+    "start": "pnpm run start:dev",
+    "start:prod": "node dist/main.js",
+    "start:dev": "esno src/main.ts",
+    "build": "tsup",
     "lint": "prettier --check ./src",
     "lint:fix": "prettier --write ./src",
+    "apify:push": "../../apify-push.sh pokemon-scarlet",
     "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
   },
   "author": "Joël Charles",
