--- a/packages/fall-guys/package.json
+++ b/packages/fall-guys/package.json
@@ -11,16 +11,16 @@
     "slug": "fall-guys"
   },
   "dependencies": {
+    "@wng/common": "workspace:*",
     "apify": "^3.1.1",
-    "crawlee": "^3.1.2",
-    "jsdom": "^20.0.3",
-    "@wng/common": "workspace:*"
+    "crawlee": "^3.1.4",
+    "jsdom": "^20.0.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.65",
+    "@types/node": "^16.18.11",
     "esno": "^0.16.3",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "pnpm run start:dev",
