--- a/packages/trackmania--2/package.json
+++ b/packages/trackmania--2/package.json
@@ -11,15 +11,15 @@
     "slug": "trackmania--2"
   },
   "dependencies": {
-    "apify": "^3.1.1",
-    "crawlee": "^3.1.2",
-    "@wng/common": "workspace:*"
+    "@wng/common": "workspace:*",
+    "apify": "^3.1.2",
+    "crawlee": "^3.2.2"
   },
   "devDependencies": {
-    "@types/node": "^16.18.11",
+    "@types/node": "^16.18.12",
     "esno": "^0.16.3",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "tsup": "^6.6.3",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "pnpm run start:dev",
