--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "esno": "^0.16.3",
-    "husky": "^8.0.3",
     "inquirer": "^9.1.4",
     "lint-staged": "^13.1.2",
     "meow": "^11.0.0",
@@ -34,6 +33,9 @@
     "prettier": "^2.8.4",
     "typescript": "^4.9.5",
     "undici": "^5.20.0"
+  },
+  "dependencies": {
+    "husky": "^8.0.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
